include/libkrun_windows.h


#define KRUN_LOG_TARGET_DEFAULT (-1)
#define KRUN_LOG_LEVEL_OFF   0
#define KRUN_LOG_LEVEL_ERROR 1
#define KRUN_LOG_LEVEL_WARN  2
#define KRUN_LOG_LEVEL_INFO  3
#define KRUN_LOG_LEVEL_DEBUG 4
#define KRUN_LOG_LEVEL_TRACE 5
#define KRUN_LOG_STYLE_AUTO   0
#define KRUN_LOG_STYLE_ALWAYS 1
#define KRUN_LOG_STYLE_NEVER  2
#define KRUN_LOG_OPTION_NO_ENV 1
#define KRUN_DISK_FORMAT_RAW   0
#define KRUN_DISK_FORMAT_QCOW2 1
#define KRUN_DISK_FORMAT_VMDK  2
#define KRUN_KERNEL_FORMAT_RAW       0
#define KRUN_KERNEL_FORMAT_ELF       1
#define KRUN_KERNEL_FORMAT_PE_GZ     2
#define KRUN_KERNEL_FORMAT_IMAGE_BZ2 3
#define KRUN_KERNEL_FORMAT_IMAGE_GZ  4
#define KRUN_KERNEL_FORMAT_IMAGE_ZSTD 5
#define KRUN_TSI_HIJACK_INET (1 << 0)
#define KRUN_TSI_HIJACK_UNIX (1 << 1)
#define NET_FEATURE_CSUM        (1 << 0)
#define NET_FEATURE_GUEST_CSUM  (1 << 1)
#define NET_FEATURE_GUEST_TSO4  (1 << 7)
#define NET_FEATURE_GUEST_TSO6  (1 << 8)
#define NET_FEATURE_GUEST_UFO   (1 << 10)
#define NET_FEATURE_HOST_TSO4   (1 << 11)
#define NET_FEATURE_HOST_TSO6   (1 << 12)
#define NET_FEATURE_HOST_UFO    (1 << 14)
KRUN_API int32_t krun_set_log_level(uint32_t level);
KRUN_API int32_t krun_init_log(int target_fd, uint32_t level, uint32_t style, uint32_t options);
KRUN_API int32_t krun_create_ctx(void);
KRUN_API int32_t krun_free_ctx(uint32_t ctx_id);
KRUN_API int32_t krun_set_vm_config(uint32_t ctx_id, uint8_t num_vcpus, uint32_t ram_mib);
KRUN_API int32_t krun_set_kernel(uint32_t ctx_id,
                                  const char *kernel_path,
                                  uint32_t kernel_format,
                                  const char *initramfs,
                                  const char *cmdline);
KRUN_API int32_t krun_set_firmware(uint32_t ctx_id, const char *firmware_path);
KRUN_API int32_t krun_split_irqchip(uint32_t ctx_id, bool enable);
KRUN_API int32_t krun_set_root(uint32_t ctx_id, const char *root_path);
KRUN_API int32_t krun_add_virtiofs(uint32_t ctx_id,
                                    const char *c_tag,
                                    const char *c_path);
KRUN_API int32_t krun_add_virtiofs2(uint32_t ctx_id,
                                     const char *c_tag,
                                     const char *c_path,
                                     uint64_t shm_size);
KRUN_API int32_t krun_set_mapped_volumes(uint32_t ctx_id,
                                          const char *const mapped_volumes[]);
KRUN_API int32_t krun_add_disk(uint32_t ctx_id,
                                const char *block_id,
                                const char *disk_path,
                                bool read_only);
KRUN_API int32_t krun_add_net_tcp(uint32_t ctx_id,
                                   const char *c_iface_id,
                                   const uint8_t *c_mac,
                                   const char *c_tcp_addr);
KRUN_API int32_t krun_set_port_map(uint32_t ctx_id,
                                    const char *const port_map[]);
KRUN_API int32_t krun_add_vsock(uint32_t ctx_id, uint32_t tsi_features);
KRUN_API int32_t krun_add_vsock_port_windows(uint32_t ctx_id,
                                              uint32_t port,
                                              const char *c_pipe_name);
KRUN_API int32_t krun_disable_implicit_vsock(uint32_t ctx_id);
KRUN_API int32_t krun_set_console_output(uint32_t ctx_id, const char *c_filepath);
KRUN_API int32_t krun_disable_implicit_console(uint32_t ctx_id);
KRUN_API int32_t krun_set_kernel_console(uint32_t ctx_id, const char *console_id);
KRUN_API int32_t krun_add_virtio_console_default(uint32_t ctx_id,
                                                  int input_fd,
                                                  int output_fd,
                                                  int err_fd);
KRUN_API int32_t krun_add_serial_console_default(uint32_t ctx_id,
                                                   int input_fd,
                                                   int output_fd);
KRUN_API int32_t krun_add_virtio_console_multiport(uint32_t ctx_id);
KRUN_API int32_t krun_add_console_port_tty(uint32_t ctx_id,
                                            uint32_t console_id,
                                            const char *name,
                                            int tty_fd);
KRUN_API int32_t krun_add_console_port_inout(uint32_t ctx_id,
                                              uint32_t console_id,
                                              const char *name,
                                              int input_fd,
                                              int output_fd);
KRUN_API int32_t krun_set_workdir(uint32_t ctx_id, const char *workdir_path);
KRUN_API int32_t krun_set_exec(uint32_t ctx_id,
                                const char *exec_path,
                                const char *const argv[],
                                const char *const envp[]);
KRUN_API int32_t krun_set_env(uint32_t ctx_id, const char *const envp[]);
KRUN_API int32_t krun_set_rlimits(uint32_t ctx_id, const char *const c_rlimits[]);
KRUN_API int32_t krun_setuid(uint32_t ctx_id, uint32_t uid);
KRUN_API int32_t krun_setgid(uint32_t ctx_id, uint32_t gid);
KRUN_API int32_t krun_set_smbios_oem_strings(uint32_t ctx_id,
                                              const char *const oem_strings[]);
KRUN_API int32_t krun_set_snd_device(uint32_t ctx_id, bool enable);
KRUN_API int32_t krun_get_shutdown_eventfd(uint32_t ctx_id);
KRUN_API int32_t krun_set_nested_virt(uint32_t ctx_id, bool enabled);
KRUN_API int32_t krun_check_nested_virt(void);
KRUN_API int32_t krun_set_gpu_options(uint32_t ctx_id, uint32_t virgl_flags);
KRUN_API int32_t krun_set_gpu_options2(uint32_t ctx_id,
                                        uint32_t virgl_flags,
                                        uint64_t shm_size);
KRUN_API int32_t krun_set_display_backend(uint32_t ctx_id,
                                           const void *vtable,
                                           size_t vtable_size);
KRUN_API int32_t krun_add_display(uint32_t ctx_id, uint32_t width, uint32_t height);
KRUN_API int32_t krun_display_set_refresh_rate(uint32_t ctx_id,
                                                uint32_t display_id,
                                                uint32_t refresh_rate);
KRUN_API int32_t krun_start_enter(uint32_t ctx_id);